--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 <body>
   <!-- Menú desplegable de usuario -->
   <header>
-    <div class="menu">
-      <span class="menu-toggle">☰ Usuario</span>
-      <ul class="menu-opciones">
-        <li><a href="#">Perfil</a></li>
-        <li><a href="#">Noticias por país</a></li>
-        <li><a href="#">Idioma</a></li>
-        <li><a href="#">Favoritos</a></li>
-        <li><a href="#">Historial</a></li>
-        <li><a href="#">Notificaciones</a></li>
-        <li><a href="#">Cerrar sesión</a></li>
-      </ul>
+    <h1> Global Hoy</h1>
+    <div class="user-menu-container">
+      <button class="user-menu-button">☰ Usuario</button>
+      <div class="user-dropdown-menu">
+        <button onclick="cambiarPais()"> Cambiar país</button>
+        <button onclick="cambiarIdioma()"> Cambiar idioma</button>
+        <button onclick="verFavoritos()">⭐ Mis favoritos</button>
+        <button onclick="verHistorial()"> Mi historial</button>
+        <button onclick="toggleNotificaciones()"> Notificaciones</button>
+        <button onclick="cerrarSesion()"> Cerrar sesión</button>
+      </div>
     </div>
   </header>
 
@@ -115,12 +115,56 @@
       // Aquí puedes enviar el email a tu base de datos o API
     }
 
+    function cambiarPais() {
+      alert("Función para cambiar país aún no implementada.");
+    }
+
+    function cambiarIdioma() {
+      alert("Función para cambiar idioma aún no implementada.");
+    }
+
+    function verFavoritos() {
+      const favoritos = JSON.parse(localStorage.getItem("favoritos")) || [];
+      alert("Favoritos: " + favoritos.join(", "));
+    }
+
+    function verHistorial() {
+      const historial = JSON.parse(localStorage.getItem("historial")) || [];
+      alert("Historial: " + historial.join(", "));
+    }
+
+    function toggleNotificaciones() {
+      const estado = localStorage.getItem("notificaciones") === "on";
+      localStorage.setItem("notificaciones", estado ? "off" : "on");
+      alert("Notificaciones " + (estado ? "desactivadas" : "activadas"));
+    }
+
+    function cerrarSesion() {
+      alert("Sesión cerrada (esto es un ejemplo).");
+    }
+
     // Ejecutar
     (async () => {
       const pais = await detectarPais();
       await cargarNoticiasLocales(pais);
       await cargarNoticiasGlobales();
       await cargarAnuncios(pais);
+
+      // --- Ejemplos de uso de funciones --- 
+      // Guardar y obtener un idioma:
+      setCookie("lang", "es");
+      console.log("Idioma de la cookie:", getCookie("lang"));
+
+      // Registrar una noticia como favorita
+      guardarFavorito("noticia-123");
+      console.log("Favoritos:", obtenerFavoritos());
+
+      // Registrar visita y ver historial
+      registrarVisita("noticia-123");
+      console.log("Historial:", obtenerHistorial());
+
+      // Mostrar una notificación (requiere permiso del navegador)
+      // mostrarNotificacion("Bienvenido", "Gracias por visitar Global Hoy!");
     })();
 
     // Lógica para el menú desplegable
@@ -139,5 +183,6 @@
   <script src="js/favoritos.js"></script>
   <script src="js/historial.js"></script>
   <script src="js/notificaciones.js"></script>
+  <script src="js/userMenu.js"></script>
 </body>
 </html>
