--- a/index.html
+++ b/index.html
@@ -29,16 +29,9 @@
     <p>Tu fuente de noticias locales e internacionales, personalizadas por país y en tu idioma.</p>
   </section>
 
-  <!-- Noticias Locales -->
-  <section id="noticias-locales">
-    <h2>Noticias en <span id="pais-actual">tu país</span></h2>
-    <ul id="lista-noticias-locales"></ul>
-  </section>
-
-  <!-- Noticias internacionales (Latest News) -->
-  <section>
-    <h2>Latest News</h2>
-    <ul id="lista-noticias"></ul>
+  <!-- Contenedor unificado de noticias -->
+  <section id="noticiasContainer">
+    <h2>Cargando noticias...</h2>
   </section>
 
   <!-- Anuncios Locales -->
@@ -56,50 +49,86 @@
 
   <!-- Script de detección + carga -->
   <script>
-    async function detectarPais() {
-      try {
-        const res = await fetch('https://ipapi.co/json/');
-        const data = await res.json();
-        return data.country_code.toLowerCase(); // Ej: 'us', 'es', 'do'
-      } catch (error) {
-        console.error('Error al detectar país:', error);
-        return 'us'; // por defecto
-      }
+    // Mostrar modal de país
+    function cambiarPais() {
+      document.getElementById("modalPais").style.display = "block";
     }
 
-    async function cargarNoticiasLocales(pais) {
-      document.getElementById('pais-actual').textContent = pais.toUpperCase();
-      const ruta = `public/noticias/${pais}.json`;
-      try {
-        const res = await fetch(ruta);
-        const noticias = await res.json();
-        const ul = document.getElementById('lista-noticias-locales');
-        noticias.forEach(noticia => {
-          const li = document.createElement('li');
-          li.innerHTML = `<strong>${noticia.titulo}</strong><p>${noticia.descripcion}</p>`;
-          ul.appendChild(li);
+    // Mostrar modal de idioma
+    function cambiarIdioma() {
+      document.getElementById("modalIdioma").style.display = "block";
+    }
+
+    // Guardar país y recargar noticias
+    function guardarPais() {
+      const pais = document.getElementById("paisSelect").value;
+      localStorage.setItem("paisSeleccionado", pais);
+      location.reload();
+    }
+
+    // Guardar idioma
+    function guardarIdioma() {
+      const idioma = document.getElementById("idiomaSelect").value;
+      localStorage.setItem("idiomaSeleccionado", idioma);
+      location.reload();
+    }
+
+    // Cargar noticias automáticamente por país
+    document.addEventListener("DOMContentLoaded", () => {
+      const pais = localStorage.getItem("paisSeleccionado") || "us";
+      const idioma = localStorage.getItem("idiomaSeleccionado") || "en";
+
+      // Cargar noticias locales
+      fetch(`public/noticias/${pais}.json`)
+        .then(res => res.json())
+        .then(data => mostrarNoticias(data, idioma))
+        .catch(() => console.warn("No se pudieron cargar noticias del país."));
+
+      // Cargar anuncios
+      cargarAnuncios(pais);
+
+      // Lógica para el menú desplegable
+      const userMenuButton = document.querySelector('.user-menu-button');
+      const userDropdownMenu = document.querySelector('.user-dropdown-menu');
+
+      if (userMenuButton && userDropdownMenu) {
+        userMenuButton.addEventListener('click', function() {
+          userDropdownMenu.classList.toggle('visible');
         });
-      } catch (e) {
-        console.error('Error cargando noticias locales:', e);
       }
+
+      // Cerrar modales al hacer clic fuera de ellos
+      window.onclick = function(event) {
+        const modalPais = document.getElementById('modalPais');
+        const modalIdioma = document.getElementById('modalIdioma');
+        if (event.target == modalPais) {
+          modalPais.style.display = 'none';
+        }
+        if (event.target == modalIdioma) {
+          modalIdioma.style.display = 'none';
+        }
+      };
+    });
+
+    // Esta función ya debe estar, pero si no:
+    function mostrarNoticias(data, idioma) {
+      const contenedor = document.getElementById("noticiasContainer");
+      contenedor.innerHTML = "";
+      data.forEach(noticia => {
+        const div = document.createElement("div");
+        div.innerHTML = `<h3>${noticia.titulo}</h3><p>${noticia.descripcion}</p>`;
+        contenedor.appendChild(div);
+      });
     }
 
-    async function cargarNoticiasGlobales() {
-      try {
-        const res = await fetch('public/noticias/global.json');
-        const noticias = await res.json();
-        const ul = document.getElementById('lista-noticias');
-        noticias.forEach(noticia => {
-          const li = document.createElement('li');
-          li.innerHTML = `<a href="${noticia.url}" target="_blank">${noticia.titulo}</a>`;
-          ul.appendChild(li);
-        });
-      } catch (e) {
-        console.error('Error cargando noticias globales:', e);
-      }
+    // Funciones de utilidad (mantener si no están en archivos JS externos)
+    function suscribirse() {
+      const email = document.getElementById('email-input').value;
+      alert(`Gracias por suscribirte con: ${email}`);
+      // Aquí puedes enviar el email a tu base de datos o API
     }
 
-    async function cargarAnuncios(pais) {
+    function cargarAnuncios(pais) {
       const anuncios = {
         do: "¡Disfruta de nuestras noticias desde República Dominicana!",
         us: "Noticias importantes para ti desde EE.UU.",
@@ -107,20 +136,6 @@
       };
       document.getElementById('pais-anuncio').textContent = pais.toUpperCase();
       document.getElementById('contenido-anuncio').textContent = anuncios[pais] || "Bienvenido a Global Hoy.";
-    }
-
-    function suscribirse() {
-      const email = document.getElementById('email-input').value;
-      alert(`Gracias por suscribirte con: ${email}`);
-      // Aquí puedes enviar el email a tu base de datos o API
-    }
-
-    function cambiarPais() {
-      alert("Función para cambiar país aún no implementada.");
-    }
-
-    function cambiarIdioma() {
-      alert("Función para cambiar idioma aún no implementada.");
     }
 
     function verFavoritos() {
@@ -142,47 +157,35 @@
     function cerrarSesion() {
       alert("Sesión cerrada (esto es un ejemplo).");
     }
-
-    // Ejecutar
-    (async () => {
-      const pais = await detectarPais();
-      await cargarNoticiasLocales(pais);
-      await cargarNoticiasGlobales();
-      await cargarAnuncios(pais);
-
-      // --- Ejemplos de uso de funciones --- 
-      // Guardar y obtener un idioma:
-      setCookie("lang", "es");
-      console.log("Idioma de la cookie:", getCookie("lang"));
-
-      // Registrar una noticia como favorita
-      guardarFavorito("noticia-123");
-      console.log("Favoritos:", obtenerFavoritos());
-
-      // Registrar visita y ver historial
-      registrarVisita("noticia-123");
-      console.log("Historial:", obtenerHistorial());
-
-      // Mostrar una notificación (requiere permiso del navegador)
-      // mostrarNotificacion("Bienvenido", "Gracias por visitar Global Hoy!");
-    })();
-
-    // Lógica para el menú desplegable
-    document.addEventListener('DOMContentLoaded', function() {
-      const menuToggle = document.querySelector('.menu-toggle');
-      const menuOpciones = document.querySelector('.menu-opciones');
-
-      if (menuToggle && menuOpciones) {
-        menuToggle.addEventListener('click', function() {
-          menuOpciones.classList.toggle('visible');
-        });
-      }
-    });
   </script>
   <script src="js/cookies.js"></script>
   <script src="js/favoritos.js"></script>
   <script src="js/historial.js"></script>
   <script src="js/notificaciones.js"></script>
-  <script src="js/userMenu.js"></script>
+  <!-- Modal para cambiar país -->
+<div id="modalPais" class="modal">
+  <div class="modal-content">
+    <h3>Selecciona tu país</h3>
+    <select id="paisSelect">
+      <option value="us">Estados Unidos</option>
+      <option value="es">España</option>
+      <option value="do">República Dominicana</option>
+    </select>
+    <button onclick="guardarPais()">Guardar</button>
+  </div>
+</div>
+
+<!-- Modal para cambiar idioma -->
+<div id="modalIdioma" class="modal">
+  <div class="modal-content">
+    <h3>Selecciona tu idioma</h3>
+    <select id="idiomaSelect">
+      <option value="es">Español</option>
+      <option value="en">English</option>
+    </select>
+    <button onclick="guardarIdioma()">Guardar</button>
+  </div>
+</div>
+
 </body>
 </html>
