--- a/index.html
+++ b/index.html
@@ -7,55 +7,61 @@
   <link rel="stylesheet" href="estilos.css" />
 </head>
 <body>
-  <!-- Menú desplegable de usuario -->
   <header>
     <h1> Global Hoy</h1>
-    <div class="menu-usuario">
-      <button id="menu-toggle-button">☰ Usuario</button>
-      <ul id="userMenu">
-        <li onclick="verNoticiasPorPais()">Noticias por país</li>
-        <li onclick="cambiarIdioma()">Cambio de idioma</li>
-        <li onclick="verHistorial()">Historial y favoritos</li>
-        <li onclick="verNotificaciones()">Notificaciones</li>
-        <li onclick="cerrarSesion()">Cerrar sesión</li>
-      </ul>
-    </div>
+    <button id="hamburger-menu-button" class="hamburger-menu-button">☰</button>
   </header>
 
-  <!-- Bienvenida -->
-  <section>
-    <h1>Welcome to Global Hoy</h1>
-    <p>Tu fuente de noticias locales e internacionales, personalizadas por país y en tu idioma.</p>
-  </section>
+  <!-- Menú Lateral (Sidebar) -->
+  <nav id="sidebar-menu" class="sidebar-menu">
+    <button id="close-sidebar-button" class="close-sidebar-button">×</button>
+    <ul>
+      <li onclick="cambiarPais()" data-translate="news_by_country">Noticias por país</li>
+      <li onclick="cambiarIdioma()" data-translate="language">Cambio de idioma</li>
+      <li onclick="verHistorial()" data-translate="history">Historial y favoritos</li>
+      <li onclick="verNotificaciones()" data-translate="notifications">Notificaciones</li>
+      <li onclick="cerrarSesion()" data-translate="logout">Cerrar sesión</li>
+    </ul>
+  </nav>
 
-  <!-- Contenedor unificado de noticias -->
-  <section id="noticiasContainer">
-    <h2>Cargando noticias...</h2>
-  </section>
+  <!-- Contenido Principal -->
+  <main>
+    <section>
+      <h1 data-translate="welcome">Welcome to Global Hoy</h1>
+      <p>Tu fuente de noticias locales e internacionales, personalizadas por país y en tu idioma.</p>
+    </section>
 
-  <!-- Anuncios Locales -->
-  <section id="anuncio-local">
-    <h3>Anuncio para <span id="pais-anuncio">tu país</span></h3>
-    <p id="contenido-anuncio">...</p>
-  </section>
+    <!-- Contenedor unificado de noticias -->
+    <section id="noticiasContainer">
+      <h2>Cargando noticias...</h2>
+    </section>
 
-  <!-- Suscripción -->
-  <section>
-    <h2>Subscribe to News</h2>
-    <input type="email" placeholder="Enter your email" id="email-input" />
-    <button onclick="suscribirse()">Subscribe to News</button>
-  </section>
+    <!-- Anuncios Locales -->
+    <section id="anuncio-local">
+      <h3>Anuncio para <span id="pais-anuncio">tu país</span></h3>
+      <p id="contenido-anuncio">...</p>
+    </section>
+
+    <!-- Suscripción -->
+    <section>
+      <h2 data-translate="subscribe">Subscribe to News</h2>
+      <input type="email" placeholder="Enter your email" id="email-input" />
+      <button onclick="suscribirse()" data-translate="subscribe">Subscribe to News</button>
+    </section>
+  </main>
 
   <!-- Script de detección + carga -->
   <script>
     // Mostrar modal de país
     function cambiarPais() {
       document.getElementById("modalPais").style.display = "block";
+      document.getElementById("sidebar-menu").style.width = "0"; // Cerrar sidebar
     }
 
     // Mostrar modal de idioma
     function cambiarIdioma() {
       document.getElementById("modalIdioma").style.display = "block";
+      document.getElementById("sidebar-menu").style.width = "0"; // Cerrar sidebar
     }
 
     // Guardar país y recargar noticias
@@ -71,53 +77,6 @@
       localStorage.setItem("idiomaSeleccionado", idioma);
       location.reload();
     }
-
-    // Cargar noticias automáticamente por país
-    document.addEventListener("DOMContentLoaded", () => {
-      const pais = localStorage.getItem("paisSeleccionado") || "us";
-      const idioma = localStorage.getItem("idiomaSeleccionado") || "en";
-
-      // Cargar noticias locales
-      fetch(`public/noticias/${pais}.json`)
-        .then(res => res.json())
-        .then(data => mostrarNoticias(data, idioma))
-        .catch(() => console.warn("No se pudieron cargar noticias del país."));
-
-      // Cargar anuncios
-      cargarAnuncios(pais);
-
-      // Lógica para el menú desplegable
-    document.addEventListener('DOMContentLoaded', function() {
-      const menuToggleButton = document.getElementById('menu-toggle-button');
-      const userMenu = document.getElementById('userMenu');
-
-      if (menuToggleButton && userMenu) {
-        menuToggleButton.addEventListener('click', function() {
-          userMenu.style.display = userMenu.style.display === 'block' ? 'none' : 'block';
-        });
-      }
-
-      // Cerrar modales al hacer clic fuera de ellos
-      window.onclick = function(event) {
-        const modalPais = document.getElementById('modalPais');
-        const modalIdioma = document.getElementById('modalIdioma');
-        if (event.target == modalPais) {
-          modalPais.style.display = 'none';
-        }
-        if (event.target == modalIdioma) {
-          modalIdioma.style.display = 'none';
-        }
-
-        // Cerrar menú si se hace clic fuera
-        const menuUsuarioDiv = document.querySelector('.menu-usuario');
-        if (menuUsuarioDiv && !menuUsuarioDiv.contains(event.target)) {
-          if (userMenu) {
-            userMenu.style.display = 'none';
-          }
-        }
-      };
-    });
-    });
 
     // Esta función ya debe estar, pero si no:
     function mostrarNoticias(data, idioma) {
@@ -166,6 +125,88 @@
     function cerrarSesion() {
       alert("Sesión cerrada (esto es un ejemplo).");
     }
+
+    // Función para cargar el idioma
+    function loadLanguage(lang) {
+      console.log(`Intentando cargar idioma: ${lang}`);
+      fetch(`public/i18n/${lang}.json`)
+        .then(response => {
+          if (!response.ok) {
+            throw new Error(`Error al cargar el archivo de idioma: ${response.statusText}`);
+          }
+          return response.json();
+        })
+        .then(data => {
+          console.log(`Idioma ${lang} cargado exitosamente.`, data);
+          document.querySelectorAll("[data-translate]").forEach(el => {
+            const key = el.getAttribute("data-translate");
+            if (data[key]) {
+              el.innerHTML = data[key];
+            }
+          });
+          document.querySelectorAll("[data-translate-placeholder]").forEach(el => {
+            const key = el.getAttribute("data-translate-placeholder");
+            if (data[key]) {
+              el.placeholder = data[key];
+            }
+          });
+        })
+        .catch(error => {
+          console.error('Error en la carga del idioma:', error);
+        });
+    }
+
+    document.addEventListener("DOMContentLoaded", () => {
+      console.log("DOM Content Loaded");
+      const pais = localStorage.getItem("paisSeleccionado") || "us";
+      const idioma = localStorage.getItem("idiomaSeleccionado") || "en";
+
+      // Cargar noticias locales
+      fetch(`public/noticias/${pais}.json`)
+        .then(res => res.json())
+        .then(data => mostrarNoticias(data, idioma))
+        .catch(() => console.warn("No se pudieron cargar noticias del país."));
+
+      // Cargar anuncios
+      cargarAnuncios(pais);
+
+      // Cargar idioma
+      loadLanguage(idioma);
+
+      // Lógica para el menú lateral
+      const hamburgerButton = document.getElementById('hamburger-menu-button');
+      const sidebarMenu = document.getElementById('sidebar-menu');
+      const closeSidebarButton = document.getElementById('close-sidebar-button');
+
+      if (hamburgerButton && sidebarMenu && closeSidebarButton) {
+        hamburgerButton.addEventListener('click', function() {
+          sidebarMenu.style.width = '250px'; // Abrir el menú
+        });
+
+        closeSidebarButton.addEventListener('click', function() {
+          sidebarMenu.style.width = '0'; // Cerrar el menú
+        });
+      } else {
+        console.warn("Elementos del menú lateral no encontrados.", { hamburgerButton, sidebarMenu, closeSidebarButton });
+      }
+
+      // Cerrar modales al hacer clic fuera de ellos
+      window.onclick = function(event) {
+        const modalPais = document.getElementById('modalPais');
+        const modalIdioma = document.getElementById('modalIdioma');
+        if (event.target == modalPais) {
+          modalPais.style.display = 'none';
+        }
+        if (event.target == modalIdioma) {
+          modalIdioma.style.display = 'none';
+        }
+
+        // Cerrar menú lateral si se hace clic fuera
+        if (sidebarMenu && event.target !== hamburgerButton && !sidebarMenu.contains(event.target)) {
+          sidebarMenu.style.width = '0';
+        }
+      };
+    });
   </script>
   <script src="js/cookies.js"></script>
   <script src="js/favoritos.js"></script>
