Fix translation and menu display issues

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <!-- Contenido Principal -->
   <main>
     <section>
-      <h1 data-translate="welcome">Welcome to Global Hoy</h1>
+      <h1 data-translate="welcome">Bienvenido a Global Hoy</h1>
       <p>Tu fuente de noticias locales e internacionales, personalizadas por país y en tu idioma.</p>
     </section>
 
@@ -44,9 +44,9 @@
 
     <!-- Suscripción -->
     <section>
-      <h2 data-translate="subscribe">Subscribe to News</h2>
+      <h2 data-translate="subscribe">Suscribirse a las Noticias</h2>
       <input type="email" placeholder="Enter your email" id="email-input" />
-      <button onclick="suscribirse()" data-translate="subscribe">Subscribe to News</button>
+      <button onclick="suscribirse()" data-translate="subscribe">Suscribirse a las Noticias</button>
     </section>
   </main>
 
